<package>
  <name>ct_ros</name>
  <version>1.0.0</version>
  <description>
    ADRL Control Toolbox - ROS Interface
  </description>
  <maintainer email="neunertm@ethz.ch">Michael Neunert</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
   <export>
   	  <metapackage />
   </export>
</package>