<?xml version="1.0"?>
<package>
  <name>ct_ros_msgs</name>
  <version>0.0.0</version>
  <description>The ct_ros_msgs package</description>
  <maintainer email="markusgft@gmail.com">mgiftthaler</maintainer>
  <license>BSD-2</license>
  <build_depend>message_generation</build_depend>
  <run_depend>message_runtime</run_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>