<?xml version="1.0"?>
<package>
  <name>ct_ros_nodes</name>
  <version>0.0.1</version>
  <description>The Control Toolbox - ROS examples package</description>

  <maintainer email="markusgft@gmail.com">mgiftthaler</maintainer>

  <license>BSD-2</license>

  <build_depend>ct_ros_msgs</build_depend>
  <build_depend>ct_core</build_depend>
  <build_depend>ct_rbd</build_depend>
  <build_depend>ct_models</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>ct_ros_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>ct_models</run_depend>
  
  <test_depend>gtest</test_depend>
  <buildtool_depend>catkin</buildtool_depend>
</package>